--- a/package.json
+++ b/package.json
@@ -18,13 +18,26 @@
   "homepage": "https://github.com/cschwebk/mellon",
   "dependencies": {
     "browserify": "^10.1.3",
-    "browserify-middleware": "^5.0.2",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "flux": "^2.0.3",
+    "keymirror": "^0.1.1",
     "morgan": "^1.5.2",
+    "node-sass": "^3.0.0",
+    "object-assign": "^2.0.0",
     "react": "^0.13.3",
     "reactify": "^1.1.0",
     "socket.io": "^1.3.5",
+    "uuid": "^2.0.1",
     "watchify": "^3.2.1"
+  },
+  "devDependencies": {
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-nodemon": "^2.0.3",
+    "gulp-sass": "^2.0.0",
+    "gulp-util": "^3.0.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
