--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^0.13.3",
     "reactify": "^1.1.0",
     "socket.io": "^1.3.5",
+    "telnet-stream": "0.0.4",
     "uuid": "^2.0.1",
     "watchify": "^3.2.1"
   },
