--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   "homepage": "https://github.com/cschwebk/mellon",
   "dependencies": {
     "browserify": "^10.1.3",
-    "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "express-handlebars": "^2.0.1",
     "flux": "^2.0.3",
     "keymirror": "^0.1.1",
     "morgan": "^1.5.2",
     "node-sass": "^3.0.0",
     "object-assign": "^2.0.0",
     "react": "^0.13.3",
+    "react-bootstrap": "^0.24.5",
     "reactify": "^1.1.0",
     "socket.io": "^1.3.5",
     "telnet-stream": "0.0.4",
